<resources>
    <string name="app_name">template</string>
    <string name="City">City</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Password">Password</string>
    <string name="UserName">UserName</string>
    <string name="Email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
</resources>